--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- HTML Meta Tags -->
@@ -1200,10 +1200,7 @@
                 <button class="slide-control prev" onclick="changeSlide(-1)">&#8249;</button>
                 <button class="slide-control next" onclick="changeSlide(1)">&#8250;</button>
             </div>
-        </section>
 
-        <!-- New Arrivals Section -->
-        <section class="new-arrivals-section">
             <div class="container">
                 <div class="section-header">
                     <!-- Left Pokemon Card -->
@@ -1289,10 +1286,7 @@
                     </div>
                 </div>
             </div>
-        </section>
 
-        <!-- Full Contact Section -->
-        <section class="contact-section">
             <div class="container">
                 <div class="contact-grid">
                     <!-- Contact Form -->
@@ -1376,12 +1370,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
 
-    
-        <!-- Why Whatnot -->
-        <section class="why-whatnot">
             <div class="container">
                 <div class="why-whatnot-content">
                     <div class="why-text">
@@ -1436,10 +1425,7 @@
                     </div>
                 </div>
             </div>
-        </section>
 
-        <!-- Call to Action -->
-        <section class="cta-section">
             <div class="container">
                 <div class="cta-card">
                     <h2>Never Miss a Live Sale!</h2>
@@ -1468,7 +1454,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> // test here
     </main>
 
 
